--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
           target-branch: ${{ steps.branch.outputs.name }}
           release-type: terraform-module
           token: ${{ steps.token.outputs.token }}
+          config-file: release-please-config.json
       - name: Attest
         if: ${{ steps.release.outputs.releases_created == 'true' }}
         id: attest
