--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,18 +7,33 @@
     },
     "lambdas/functions/webhook": {
       "release-type": "node",
+      "extra-files": [
+        "lambdas/functions/webhook/package-lock.json",
+      ],
     },
     "lambdas/functions/ami-housekeeper": {
       "release-type": "node",
+      "extra-files": [
+        "lambdas/functions/ami-housekeeper/package-lock.json",
+      ],
     },
     "lambdas/functions/control-plane": {
       "release-type": "node",
+      "extra-files": [
+        "lambdas/functions/control-plane/package-lock.json",
+      ],
     },
     "lambdas/functions/gh-agent-syncer": {
       "release-type": "node",
+      "extra-files": [
+        "lambdas/functions/gh-agent-syncer/package-lock.json",
+      ],
     },
     "lambdas/functions/termination-watcher": {
       "release-type": "node",
+      "extra-files": [
+        "lambdas/functions/termination-watcher/package-lock.json",
+      ],
     }
   }
 }
