--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "release-as": "6.7.0",
   "packages": {
     ".": {
-      "release-type": "terraform"
+      "release-type": "simple"
     },
     "lambdas/functions/webhook": {
       "release-type": "node",
