fix: new release please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,27 +5,27 @@
       "extra-files": [
         {
           "type": "json",
-          "path": "lambdas/functions/ami-housekeeper/package.json"
+          "path": "lambdas/functions/ami-housekeeper/package.json",
           "jsonpath": "$.version"
         },
         {
           "type": "json",
-          "path": "lambdas/functions/control-plane/package.json"
+          "path": "lambdas/functions/control-plane/package.json",
           "jsonpath": "$.version"
         },
         {
           "type": "json",
-          "path": "lambdas/functions/gh-agent-syncer/package.json"
+          "path": "lambdas/functions/gh-agent-syncer/package.json",
           "jsonpath": "$.version"
         },
         {
           "type": "json",
-          "path": "lambdas/functions/termination-watcher/package.json"
-          "jsonpath": "$.version"
+          "path": "lambdas/functions/termination-watcher/package.json",
+          "jsonpath": "$.version",
         },
         {
           "type": "json",
-          "path": "lambdas/functions/webhook/package.json"
+          "path": "lambdas/functions/webhook/package.json",
           "jsonpath": "$.version"
         }
       ]
