--- a/release-please-config.json
+++ b/release-please-config.json
@@ -21,7 +21,7 @@
         {
           "type": "json",
           "path": "lambdas/functions/termination-watcher/package.json",
-          "jsonpath": "$.version",
+          "jsonpath": "$.version"
         },
         {
           "type": "json",
