--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,34 @@
 {
+  "release-type": "simple",
   "packages": {
-    // `.` is a special case for handling to root of the repository
-    "lambdas": {
-      // overrides release-type for node
-      "release-type": "node",
-      // exclude commits from that path from processing
-      "exclude-paths": ["lambdas/libs"]
-
+    ".": {
+      "extra-files": [
+        {
+          "type": "json",
+          "path": "lambdas/functions/ami-housekeeper/package.json",
+          "jsonpath": "$.version"
+        },
+        {
+          "type": "json",
+          "path": "lambdas/functions/control-plane/package.json",
+          "jsonpath": "$.version"
+        },
+        {
+          "type": "json",
+          "path": "lambdas/functions/gh-agent-syncer/package.json",
+          "jsonpath": "$.version"
+        },
+        {
+          "type": "json",
+          "path": "lambdas/functions/termination-watcher/package.json",
+          "jsonpath": "$.version"
+        },
+        {
+          "type": "json",
+          "path": "lambdas/functions/webhook/package.json",
+          "jsonpath": "$.version"
+        }
+      ]
     }
   }
 }
